--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="wrapper">
-
+  <!--<div>
+    <button (click)=logout()/>
+  </div>-->
   <div class="jumbotron">
     <div class="container">
-      <div class="col-sm-8 col-sm-offset-2">
+      <div>
         <app-alert></app-alert>
         <router-outlet></router-outlet>
       </div>
