--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,375 +1,4 @@
-<body class="animated fadeIn" marginwidth="0">
-
-
-  <!-- Begin page content -->
-  <div class="container page-content ">
-
-    <div class="row">
-      <!-- left links -->
-      <div class="col-md-3">
-    
-            <div class="row">
-              <div class="col-md-12">
+	<div class="col-md-9">
            
-                <!-- post state form -->
-                <div class="box profile-info n-border-top">
-                  <form>
-                    <textarea class="form-control input-lg p-text-area" rows="2" placeholder="Whats in your mind today?"></textarea>
-                  </form>
-                  <div class="box-footer box-form">
-                    <button type="button" class="btn btn-azure pull-right">Post</button>
-                    <ul class="nav nav-pills">
-                      <li><a href="#"><i class="fa fa-map-marker"></i></a></li>
-                      <li><a href="#"><i class="fa fa-camera"></i></a></li>
-                      <li><a href="#"><i class=" fa fa-film"></i></a></li>
-                      <li><a href="#"><i class="fa fa-microphone"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-                <!-- end post state form -->
-
-                <!--   posts -->
-                <div class="box box-widget">
-                  <div class="box-header with-border">
-                    <div class="user-block">
-                      <img class="img-circle" src="img/Friends/guy-3.jpg" alt="User Image">
-                      <span class="username"><a href="#">John Breakgrow jr.</a></span>
-                      <span class="description">Shared publicly - 7:30 PM Today</span>
-                    </div>
-                  </div>
-
-                  <div class="box-body" style="display: block;">
-                    <img class="img-responsive show-in-modal" src="img/Post/young-couple-in-love.jpg" alt="Photo">
-                    <p>I took this photo this morning. What do you guys think?</p>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-share"></i> Share</button>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-thumbs-o-up"></i> Like</button>
-                    <span class="pull-right text-muted">127 likes - 3 comments</span>
-                  </div>
-                  <div class="box-footer box-comments" style="display: block;">
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-2.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Maria Gonzales
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                      </div>
-                    </div>
-
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-3.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Luna Stark
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="box-footer" style="display: block;">
-                    <form action="#" method="post">
-                      <img class="img-responsive img-circle img-sm" src="img/Friends/guy-3.jpg" alt="Alt Text">
-                      <div class="img-push">
-                        <input type="text" class="form-control input-sm" placeholder="Press enter to post comment" data-cip-id="cIPJQ342845639">
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <!--  end posts-->
-
-
-                <!-- post -->
-                <div class="box box-widget">
-                  <div class="box-header with-border">
-                    <div class="user-block">
-                      <img class="img-circle" src="img/Friends/guy-3.jpg" alt="User Image">
-                      <span class="username"><a href="#">Jonathan Burke Jr.</a></span>
-                      <span class="description">Shared publicly - 7:30 PM Today</span>
-                    </div>
-                    <div class="box-tools">
-                      <button type="button" class="btn btn-box-tool" data-toggle="tooltip" title="" data-original-title="Mark as read">
-                        <i class="fa fa-circle-o"></i></button>
-                      <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                      <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                    </div>
-                  </div>
-                  <div class="box-body">
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                      blind texts. Separated they live in Bookmarksgrove right at</p>
-
-                    <p>the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and
-                      supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of
-                      sentences fly into your mouth.</p>
-
-                    <div class="attachment-block clearfix">
-                      <img class="attachment-img" src="img/Photos/2.jpg" alt="Attachment Image">
-                      <div class="attachment-pushed">
-                        <h4 class="attachment-heading"><a href="http://www.bootdey.com/">Lorem ipsum text generator</a></h4>
-                        <div class="attachment-text">
-                          Description about the attachment can be placed here. Lorem Ipsum is simply dummy text of the printing and typesetting industry...
-                          <a href="#">more</a>
-                        </div>
-                      </div>
-                    </div>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-share"></i> Share</button>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-thumbs-o-up"></i> Like</button>
-                    <span class="pull-right text-muted">45 likes - 2 comments</span>
-                  </div>
-                  <div class="box-footer box-comments">
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-5.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Maria Gonzales
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                      </div>
-                    </div>
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-6.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Nora Havisham
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content
-                        here, content here', making it look like readable English.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="box-footer">
-                    <form action="#" method="post">
-                      <img class="img-responsive img-circle img-sm" src="img/Friends/guy-3.jpg" alt="Alt Text">
-                      <div class="img-push">
-                        <input type="text" class="form-control input-sm" placeholder="Press enter to post comment" data-cip-id="cIPJQ342845640">
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <!-- end post -->
-
-                <!--  posts -->
-                <div class="box box-widget">
-                  <div class="box-header with-border">
-                    <div class="user-block">
-                      <img class="img-circle" src="img/Friends/guy-3.jpg" alt="User Image">
-                      <span class="username"><a href="#">John Breakgrow jr.</a></span>
-                      <span class="description">Shared publicly - 7:30 PM Today</span>
-                    </div>
-                  </div>
-
-                  <div class="box-body" style="display: block;">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac iaculis ligula, eget efficitur nisi. In vel rutrum orci.
-                      Etiam ut orci volutpat, maximus quam vel, euismod orci. Nunc in urna non lectus malesuada aliquet.
-                      Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam dignissim
-                      mi ac metus consequat, a pharetra neque molestie. Maecenas condimentum lorem quis vulputate volutpat.
-                      Etiam sapien diam
-                    </p>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-share"></i> Share</button>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-thumbs-o-up"></i> Like</button>
-                    <span class="pull-right text-muted">127 likes - 3 comments</span>
-                  </div>
-                  <div class="box-footer box-comments" style="display: block;">
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-2.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Maria Gonzales
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                      </div>
-                    </div>
-
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-3.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Luna Stark
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="box-footer" style="display: block;">
-                    <form action="#" method="post">
-                      <img class="img-responsive img-circle img-sm" src="img/Friends/guy-3.jpg" alt="Alt Text">
-                      <div class="img-push">
-                        <input type="text" class="form-control input-sm" placeholder="Press enter to post comment" data-cip-id="cIPJQ342845641">
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <!--  end posts -->
-
-                <!--   posts -->
-                <div class="box box-widget">
-                  <div class="box-header with-border">
-                    <div class="user-block">
-                      <img class="img-circle" src="img/Friends/guy-3.jpg" alt="User Image">
-                      <span class="username"><a href="#">John Breakgrow jr.</a></span>
-                      <span class="description">Shared publicly - 7:30 PM Today</span>
-                    </div>
-                  </div>
-
-                  <div class="box-body" style="display: block;">
-                    <img class="img-responsive pad" src="img/Photos/3.jpg" alt="Photo">
-                    <p>I took this photo this morning. What do you guys think?</p>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-share"></i> Share</button>
-                    <button type="button" class="btn btn-default btn-xs"><i class="fa fa-thumbs-o-up"></i> Like</button>
-                    <span class="pull-right text-muted">127 likes - 3 comments</span>
-                  </div>
-                  <div class="box-footer box-comments" style="display: block;">
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-2.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Maria Gonzales
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                      </div>
-                    </div>
-
-                    <div class="box-comment">
-                      <img class="img-circle img-sm" src="img/Friends/guy-3.jpg" alt="User Image">
-                      <div class="comment-text">
-                        <span class="username">
-                          Luna Stark
-                          <span class="text-muted pull-right">8:03 PM Today</span>
-                        </span>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="box-footer" style="display: block;">
-                    <form action="#" method="post">
-                      <img class="img-responsive img-circle img-sm" src="img/Friends/guy-3.jpg" alt="Alt Text">
-                      <div class="img-push">
-                        <input type="text" class="form-control input-sm" placeholder="Press enter to post comment" data-cip-id="cIPJQ342845642">
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <!--  end posts -->
-              </div>
-            </div>
-          </div>
-          <!-- end left posts-->
-        </div>
-      </div>
-      <!-- end  center posts -->
-
-
-
-
-      <!-- right posts -->
-      <div class="col-md-3">
-
-
-        <!-- Friends activity -->
-        <div class="widget">
-          <div class="widget-header">
-            <h3 class="widget-caption">Friends activity</h3>
-          </div>
-          <div class="widget-body bordered-top bordered-sky">
-            <div class="card">
-              <div class="content">
-                <ul class="list-unstyled team-members">
-                  <li>
-                    <div class="row">
-                      <div class="col-xs-3">
-                        <div class="avatar">
-                          <img src="img/Friends/woman-2.jpg" alt="img" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
-                      <div class="col-xs-9">
-                        <b><a href="#">Hillary Markston</a></b> shared a
-                        <b><a href="#">publication</a></b>.
-                        <span class="timeago">5 min ago</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row">
-                      <div class="col-xs-3">
-                        <div class="avatar">
-                          <img src="img/Friends/woman-3.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
-                      <div class="col-xs-9">
-                        <b><a href="#">Leidy marshel</a></b> shared a
-                        <b><a href="#">publication</a></b>.
-                        <span class="timeago">5 min ago</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row">
-                      <div class="col-xs-3">
-                        <div class="avatar">
-                          <img src="img/Friends/woman-4.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
-                      <div class="col-xs-9">
-                        <b><a href="#">Presilla bo</a></b> shared a
-                        <b><a href="#">publication</a></b>.
-                        <span class="timeago">5 min ago</span>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row">
-                      <div class="col-xs-3">
-                        <div class="avatar">
-                          <img src="img/Friends/woman-4.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
-                      <div class="col-xs-9">
-                        <b><a href="#">Martha markguy</a></b> shared a
-                        <b><a href="#">publication</a></b>.
-                        <span class="timeago">5 min ago</span>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End Friends activity -->
-
-        <!-- People You May Know -->
-      
-        <!-- End people yout may know -->
-      </div>
-      <!-- end right posts -->
-   
-  
-
-  <footer class="footer">
-    <div class="container">
-      <p class="text-muted"> Copyright © Company - All rights reserved </p>
-    </div>
-  </footer>
-  <script type="text/javascript">
-    (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)    
-}, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-49755460-1', 'auto', { 'allowLinker': true });
-    ga('require', 'linker');
-    ga('linker:autoLink', ['bootdey.com', 'www.bootdey.com', 'demos.bootdey.com']);
-    ga('send', 'pageview');
-  </script>
-
-
-</body>
+			  <app-jokes></app-jokes>
+		</div>
